# DubInstante

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW_IMPROVEMENTS.md  README.md  VERIFICATION_CHECKLIST.md  main.cpp  resources.qrc
.github/workflows/: linux.yml  main.yml  windows.yml
.qt/: QtDeploySupport.cmake
deploy/: Info.plist  build_appimage.sh  dubinstante.desktop
docs/: THECODE.md
docs/en/: README.md
docs/fr/: README.md
include/: ClickableSlider.h  Exporter.h  MainWindow.h  PlayerController.h  RythmoOverlay.h  RythmoWidget.h  TrackPanel.h  VideoWidget.h
resources/: style.qss
src/: AudioRecorderManager.cpp  Exporter.cpp  MainWindow.cpp  PlayerController.cpp  RythmoOverlay.cpp  RythmoWidget.cpp  TrackPanel.cpp  VideoWidget.cpp
src/core/: AudioRecorder.cpp  AudioRecorder.h  ExportService.cpp  ExportService.h  PlaybackEngine.cpp  PlaybackEngine.h  RythmoManager.cpp  RythmoManager.h  SaveManager.cpp  SaveManager.h
src/gui/: ClickableSlider.h  MainWindow.cpp  MainWindow.h  RythmoOverlay.cpp  RythmoOverlay.h  RythmoWidget.cpp  RythmoWidget.h  TrackPanel.cpp  TrackPanel.h  TrackSettingsDialog.cpp  TrackSettingsDialog.h  VideoWidget.cpp  VideoWidget.h
src/phonegui/: .env.example  .gitignore  CMakeLists.txt  Main.qml  build.gradle.kts  build_android.sh  main.cpp  settings.gradle.kts  setup_and_build_apk.sh
src/phonegui/android/: AndroidManifest.xml
src/phonegui/app/: build.gradle.kts
src/phonegui/app/src/main/: AndroidManifest.xml
src/phonegui/app/src/main/cpp/: AndroidPlaybackEngine.cpp  AndroidPlaybackEngine.h  CMakeLists.txt  native-lib.cpp
src/phonegui/app/src/main/java/com/dubinstante/app/: AndroidAudioRecorder.kt  AndroidExportService.kt  MainActivity.kt  NativeBridge.kt  PlaybackViewModel.kt  RythmoBand.kt  VideoPlayer.kt
src/phonegui/app/src/main/res/values/: strings.xml  themes.xml
src/utils/: TimeFormatter.cpp  TimeFormatter.h
